manifests/base/go-wrapper/go-wrapper.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-wrapper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-wrapper
  template:
    metadata:
      labels:
        app: go-wrapper
    spec:
      containers:
        - name: go-wrapper
          image: wrapper
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 128Mi
          ports:
            - containerPort: 1206
