manifests/base/go-wrapper/go-wrapper.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-wrapper
spec:
  selector:
    app: go-wrapper
  ports:
    - name: api-port
      protocol: TCP
      port: 1206
      targetPort: 1206
