manifests/base/go-wrapper/go-wrapper.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-wrapper
spec:
  rules:
    - host: go-wrapper.efrei
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-wrapper
                port:
                  name: api-port
